         and getInputStream methods.
       - Fixed concurrency bug upon application start or strop that could
         cause erros such as "no Restlet defined to process calls. Maybe it
         wasn't properly started" errors (500). Reported by several persons 
         including David Fuchs, Danny Leshem, Yunwu Zhu and Bjorn Roche.
    - Misc
       - Reverted Role equality test to default Java object equality as
         equality based on name could cause issues with MemoryRealm
         mapping if several applications used the same role names.

- 2.0.14 (2012-05-23)
    - Bug fixed
       - Fixed issue with OutputRepresentation retrieved as InputStream
         using its getStream() method when writing negative integers.
         Now properly shift values into the 0-255 ranges, leaving the -1
         value as a clear marker for end of file.
         Reported by Gabriel Pulido.
       - Usage of ranges on representations having unknown size.
         Reported by Bjorn Roche.
       - Fixed missing JSON media type with converter service and the 
         JSON extension.
       - Optimized conversions using the Jackson extension in order to reuse
         configuration (issue #577).
       - Fixed security bug in the XML extension that allows XML external 
         entity attacks. Reported by Nicolas Grégoire, 
         Caleb James DeLisle and Fabio Mancinelli.
 
- 2.0.13 (2012-04-18)
    - Bug fixed
       - Fixed user agent name detection for Firefox 12 on Windows.
         Reported by Tim Peierls.
       - Fixed issue with content negotiation in the JAX-RS when
         multiple Accept preferences were expressed by the client.
         Reported by Vincent Massol, Fabio Mancinelli, Anca Luca.

- 2.0.12 (2012-04-06)
    - Bug fixed
       - Fixed the JAX-RS extension that did not introspect the 
         interfaces and parent classes of resource classes.
         Reported and contributed by Shaun Elliott.