@@ -33,3 +33,4 @@ modules/org.restlet.ext.xml/bin/
 modules/org.restlet.ext.xstream/bin/
 modules/org.restlet.test/bin/
 modules/org.restlet/bin/
+/build/temp
